; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/mips/extr_freebsd32_machdep.c_freebsd32_sigreturn.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/mips/extr_freebsd32_machdep.c_freebsd32_sigreturn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.freebsd32_sigreturn_args = type { i32 }
%struct.TYPE_4__ = type { %struct.TYPE_5__, i32 }
%struct.TYPE_5__ = type { i32*, i32 }

@KTR_SIG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"sigreturn: td=%p ucp=%p\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"sigreturn: efault td=%p\00", align 1
@EFAULT = common dso_local global i32 0, align 4
@SIG_SETMASK = common dso_local global i32 0, align 4
@EJUSTRETURN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @freebsd32_sigreturn(%struct.thread* %0, %struct.freebsd32_sigreturn_args* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.thread*, align 8
  %5 = alloca %struct.freebsd32_sigreturn_args*, align 8
  %6 = alloca %struct.TYPE_4__, align 8
  %7 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %4, align 8
  store %struct.freebsd32_sigreturn_args* %1, %struct.freebsd32_sigreturn_args** %5, align 8
  %8 = load i32, i32* @KTR_SIG, align 4
  %9 = load %struct.thread*, %struct.thread** %4, align 8
  %10 = load %struct.freebsd32_sigreturn_args*, %struct.freebsd32_sigreturn_args** %5, align 8
  %11 = getelementptr inbounds %struct.freebsd32_sigreturn_args, %struct.freebsd32_sigreturn_args* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @CTR2(i32 %8, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), %struct.thread* %9, i32 %12)
  %14 = load %struct.freebsd32_sigreturn_args*, %struct.freebsd32_sigreturn_args** %5, align 8
  %15 = getelementptr inbounds %struct.freebsd32_sigreturn_args, %struct.freebsd32_sigreturn_args* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @copyin(i32 %16, %struct.TYPE_4__* %6, i32 24)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %2
  %20 = load i32, i32* @KTR_SIG, align 4
  %21 = load %struct.thread*, %struct.thread** %4, align 8
  %22 = call i32 @CTR1(i32 %20, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), %struct.thread* %21)
  %23 = load i32, i32* @EFAULT, align 4
  store i32 %23, i32* %3, align 4
  br label %38

24:                                               ; preds = %2
  %25 = load %struct.thread*, %struct.thread** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %27 = call i32 @set_mcontext32(%struct.thread* %25, %struct.TYPE_5__* %26)
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %7, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %24
  %31 = load i32, i32* %7, align 4
  store i32 %31, i32* %3, align 4
  br label %38

32:                                               ; preds = %24
  %33 = load %struct.thread*, %struct.thread** %4, align 8
  %34 = load i32, i32* @SIG_SETMASK, align 4
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 1
  %36 = call i32 @kern_sigprocmask(%struct.thread* %33, i32 %34, i32* %35, i32* null, i32 0)
  %37 = load i32, i32* @EJUSTRETURN, align 4
  store i32 %37, i32* %3, align 4
  br label %38

38:                                               ; preds = %32, %30, %19
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i32 @CTR2(i32, i8*, %struct.thread*, i32) #1

declare dso_local i64 @copyin(i32, %struct.TYPE_4__*, i32) #1

declare dso_local i32 @CTR1(i32, i8*, %struct.thread*) #1

declare dso_local i32 @set_mcontext32(%struct.thread*, %struct.TYPE_5__*) #1

declare dso_local i32 @kern_sigprocmask(%struct.thread*, i32, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
